# funcy-chain

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini  tox_install_deps.py
.github/workflows/: test.yml
funcy_chain/: __init__.py  chain.py  chain_base.py  getter.py  iterchain.py  utils.py
test/: conftest.py  test_builtins.py  test_chain_base.py  test_dicts.py  test_funcy_colls.py  test_funcy_seqs.py  test_getter.py  test_heapq.py  test_itertools.py  test_long_chains.py  test_random.py
