[build-system]
requires = ["flit_core ~= 3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "funcy-chain"
authors = [{name = "Tal Einat", email = "taleinat@gmail.com"}]
description = "Method chaining with funcy."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = ["chain", "method", "chaining", "funcy", "method-chaining"]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "funcy >= 1.14",
]
[project.urls]
homepage = "https://github.com/taleinat/funcy-chain"
source = "https://github.com/taleinat/funcy-chain.git"


[project.optional-dependencies]
test = [
    "pytest >= 2.7.3",
    "tox >=4.25.0, <5",
]
dev = [
    "flit >=3.3, <4",
]
lint = [
    "black",
    "isort",
    "pylint",
]

[tool.flit.module]
name = "funcy_chain"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"
